--- a/client-app/public/index.html
+++ b/client-app/public/index.html
@@ -19,13 +19,16 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600"
+    />
     <link
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css"
       crossorigin=""
     />
-    <title>Vuexy - React Admin Dashboard Template</title>
+    <title>CallInDoor| Admin Dashboard</title>
   </head>
   <body>
     <div id="root"></div>
